# agent

./: .gitignore  .pre-commit-config.yaml  AGENT.md  Makefile  README.md  kiro.jsonc  pyproject.toml  registry.yaml
.agent/: AGENT.md
agents/: architect.jsonc  developer.jsonc  devops.jsonc
architect/: SKILL.md  skill.md
developer/: SKILL.md  skill.md
developer/assets/: Makefile  pyproject.toml
developer/references/: observability.md  python-stack.md  quality.md
migration/: SKILL.md  batch-to-streaming.md  relacional-to-datalake.md
migration/references/: batch-to-streaming.md  cloudera-to-aws.md  onprem-to-cloud.md  relacional-to-datalake.md
powers/: registry.json
settings/: mcp.json
skills/architect-decisions/: SKILL.md
skills/code-implementation/: SKILL.md
skills/developer/assets/: pre-commit-config.yaml
skills/developer/references/: spark-performance.md
skills/knowledge-base/: SKILL.md
skills/knowledge-base/assets/: chart.html
skills/knowledge-base/scripts/: query_engine.py
skills/logging/: SKILL.md
skills/logging/assets/: logger.py
skills/migration/: SKILL.md  cloud-to-cloud.md  cloudera-to-aws.md  onprem-to-cloud.md
skills/migration/references/: cloud-to-cloud.md
skills/notebook-minimal/: SKILL.md
skills/notebook-minimal/assets/: presentation.html
skills/project-setup/: SKILL.md
skills/project-setup/assets/: Makefile  pyproject.toml
skills/setup/: SKILL.md
skills/skill-design/: SKILL.md
skills/testing/: SKILL.md
steering/: code-conventions.md  product.md  structure.md  tech.md  visual-style.md
(+5 files in other folders)
